service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: odh-dashboard
spec:
 gateways:
 - odh-gateway
 hosts:
 - '*'               
 http:
 - match:
   - uri:
       exact: /odh-dashboard
   rewrite:
     uri: /  
   route:           
   - destination:
       host: odh-dashboard
       port:
         number: 8180
