service-mesh/auth-policy.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: ext-authz-oauth2-proxy
  namespace: opendatahub
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
    - to:
        - operation:
            hosts: ["odh-dashboard.opendatahub.svc.cluster.local"] # todo: add more?
            notPaths: ["/auth/*"]  # todo: see if this is necessary
